# TrajCalc

./: BUILD.txt  CMakeLists.txt  README.md
data/: planets.cfg
data/data/: VSOP87A.ear  VSOP87A.jup  VSOP87A.mar  VSOP87A.mer  VSOP87A.nep  VSOP87A.sat  VSOP87A.ura  VSOP87A.ven
examples/: config.txt
src/: cache.h  con2mo.cpp  con2mo.h  fb_calc.h  main.cpp  math_defines_hack.h  mga.cpp  mga.h  planet_vsop87.cpp  planet_vsop87.h  plot.cpp  plot.h  vsop87.cpp  vsop87.h
